fixing logout button size on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,10 @@ code {
   color: rgb(82, 212, 255);
 }
 
+#btnLogout {
+  max-width: 90px;
+}
+
 /*******************************************************/
 /****************** GAME PAGE STYLING ******************/
 /*******************************************************/
